[gd_scene load_steps=4 format=3 uid="uid://brg4rj12sko3q"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_0s0a9"]
[ext_resource type="PackedScene" uid="uid://craxm4tfftg1o" path="res://scenes/Player.tscn" id="2_d5m31"]
[ext_resource type="PackedScene" uid="uid://bcdv1bscwqq6y" path="res://scenes/Kitchen.tscn" id="3_bz8r1"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0s0a9")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)

[node name="Kitchen" parent="." instance=ExtResource("3_bz8r1")]

[node name="Player" parent="." instance=ExtResource("2_d5m31")]
position = Vector2(200, 200)

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="OrdersPanel" type="Panel" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD/OrdersPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="OrdersLabel" type="Label" parent="UI/HUD/OrdersPanel/VBoxContainer"]
layout_mode = 2
text = "ORDERS"
horizontal_alignment = 1

[node name="OrdersList" type="VBoxContainer" parent="UI/HUD/OrdersPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TimeLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_right = 200.0
text = "Time: 00:00"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
text = "Score: 0"
horizontal_alignment = 1